css/style.css
.ng-invalid.ng-dirty
{
	border-color: red;
}

.ng-valid.ng-dirty
{
	border-color: green;
}

/* MINE */

.currentStudent div
{
	position: relative;
	display: inline-block;
	border: 1px solid black;
}

.currentStudent input
{
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	padding: inherit;
	border: none;
}

.name,
.score
{
	height: 3em;
	margin: 10px;
	padding: 10px;
}

.name
{
	width: 10em;
}

.score
{
	width: 6em;
}

